// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal with renderInto should match snapshot 1`] = `
<div
  id="portal"
>
  <div>
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`Portal with renderInto should match snapshot 2`] = `
<Portal
  renderInto="portal"
>
  <Portal
    containerInfo={
      <div>
        <p>
          Content
        </p>
      </div>
    }
  >
    <p>
      Content
    </p>
  </Portal>
</Portal>
`;

exports[`Portal with renderInto unmouted, should match snapshot 1`] = `
<div
  id="portal"
/>
`;

exports[`Portal with renderInto unmouted, should match snapshot 2`] = `null`;

exports[`Portal without renderInto should match snapshot 1`] = `null`;

exports[`Portal without renderInto should match snapshot 2`] = `
<Portal>
  <Portal
    containerInfo={
      <div>
        <p>
          Content
        </p>
      </div>
    }
  >
    <p>
      Content
    </p>
  </Portal>
</Portal>
`;

exports[`Portal without renderInto unmouted, should match snapshot 1`] = `null`;

exports[`Portal without renderInto unmouted, should match snapshot 2`] = `null`;
